--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "kenzyyang 英文社区网站后台",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "pm2 start app.js --watch"
   },
   "keywords": [
     "koa"
@@ -14,6 +15,10 @@
   "devDependencies": {
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.2.12"
   }
 }
