--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "kenzyyang",
   "license": "ISC",
   "devDependencies": {
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
