--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
+    "mime": "^2.4.2",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.2.12"
