--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-body": "^4.1.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "mime": "^2.4.2",
     "mysql": "^2.16.0",
